Improving invalidLogin page

--- a/static/templates/invalidLogin.html
+++ b/static/templates/invalidLogin.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="page-header">
-        <h1>Niepoprawne dane<br>
+        <h1>Invalid Data<br>
         </h1>
     </div>
 
