--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -10,6 +10,7 @@
     <link href="{{STATIC_URL}}dist/css/bootstrap.css" rel="stylesheet">
     <link href="{{STATIC_URL}}dist/css/main.css" rel="stylesheet">
     <link href="{{STATIC_URL}}dist/css/simple-sidebar.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}styles/friends-list.css" rel="stylesheet">
     <script src="{{STATIC_URL}}js/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}dist/js/bootstrap.js"></script>
     <link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css">
@@ -47,4 +48,3 @@
     </div>
   </body>
 </html>
-
