--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="page-header">
         <h1>Login <br>
-            <small>Login or register to enter twitter chat</small>
+            <small>Login with your twitter account</small>
         </h1>
     </div>
 
