--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -11,6 +11,7 @@
     <link href="{{STATIC_URL}}dist/css/main.css" rel="stylesheet">
     <link href="{{STATIC_URL}}dist/css/simple-sidebar.css" rel="stylesheet">
     <link href="{{STATIC_URL}}styles/friends-list.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}styles/main.css" rel="stylesheet">
     <script src="{{STATIC_URL}}js/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}dist/js/bootstrap.js"></script>
     <link rel="stylesheet" href="http://js.arcgis.com/3.9/js/esri/css/esri.css">
@@ -36,7 +37,6 @@
       <div id="sidebar-wrapper">
           <ul class="sidebar-nav">
             <li class="sidebar-brand"><a href="login">Login</a>
-            <li class="sidebar-brand"><a href="register">Register</a>
           </ul>
       </div>
     {% endif %}
