--- a/static/templates/chat.html
+++ b/static/templates/chat.html
@@ -7,7 +7,7 @@
         <h3 class="panel-title">Friends list</h3>
       </div>
       <div class="list-group">
-        {% for key, value in users.items %}
+        {% for key, value in friends_dict.items %}
         <a href="#" class="list-group-item">{{value}}</a>
         {% endfor %}
       </div>
